--- a/TravelHelperProj/pom.xml
+++ b/TravelHelperProj/pom.xml
@@ -122,6 +122,14 @@
 		    <artifactId>spring-security-web</artifactId>
 		    <version>4.2.0.RELEASE</version>
 		</dependency>
+	
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-core</artifactId>
+		    <version>4.2.0.RELEASE</version>
+		</dependency>
+		
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
 		<dependency>
