--- a/TravelHelperProj/src/application.properties
+++ b/TravelHelperProj/src/application.properties
@@ -1,10 +1,11 @@
 # DB Properties
-jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+#jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3307/travelhelper -- correct
-jdbc.url=jdbc:mysql://localhost:3308/travelhelper
+#jdbc.url=jdbc:mysql://localhost:3308/travelhelper
 #HibernateConfiguration
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
-hibernate.show_sql = true
-hibernate.format_sql = true
-hibernate.username = root
-hibernate.password = keval
+#hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#hibernate.show_sql = true
+#hibernate.format_sql = true
+#hibernate.username = root
+#hibernate.password = keval
+AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid credential. Do not Hack
