--- a/TravelHelperProj/pom.xml
+++ b/TravelHelperProj/pom.xml
@@ -159,5 +159,12 @@
 		    <version>2.5</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160810</version>
+		</dependency>
+		
   </dependencies>
   </project>
