--- a/TravelHelperProj/pom.xml
+++ b/TravelHelperProj/pom.xml
@@ -166,5 +166,13 @@
 		    <version>20160810</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itextpdf</artifactId>
+		    <version>5.0.6</version>
+		</dependency>
+		
+		
   </dependencies>
   </project>
